open api generator fix
